# sidereal-time-calculator

./: .gitmodules  Cargo.toml  Makefile.toml  README.md
src/: libastro.rs  main.rs
